[package]
name = "js8rs"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"
keywords = ["js8", "radio", "dsp"]
repository = "https://github.com/liamsto/js8rs"
readme = "README.md"

[dependencies]
crc = "3.4.0"
fancy-regex = "0.18.0"
libm = "0.2.15"
num-complex = "0.4.6"
phf = { version = "0.14.0", features = ["macros", "phf_macros"] }
rustfft = "6.4.1"

[dev-dependencies]
criterion = "0.8.2"
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
cpal = "0.16.0"

[features]
escape_sub_char = []
legacy_pack_data = []

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 2

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "build_frames"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "commands"
harness = false

[lints.clippy]
manual_midpoint = "warn"
too_many_arguments = "allow" # since we try to keep function signatures similar to C++ source, this lint gets annoying fast.
manual_let_else = "warn"
wildcard_imports = "warn"
unreadable_literal = "warn"
uninlined_format_args = "warn"
